fourth assignment regarding CSS border style and br using CSS

--- a/10_12_2016/bhaskar.html
+++ b/10_12_2016/bhaskar.html
@@ -10,6 +10,11 @@
         <title>RIM Works </title>
         <!--style - this is used to write CSS styles on the html file-->
         <style>
+            input
+            {
+
+            border: 2px solid;
+            }
         </style>
         <!--script - this is used to write javascript on the html file-->
         <script>
