assignment on CSS with selectors

--- a/10_19_2016/index.html
+++ b/10_19_2016/index.html
@@ -5,7 +5,7 @@
     <!--head of the web page-->
     <head>
         <!--title - this is the title of this html file-->
-        <title>DMV New License Form</title>
+        <title>Bhaskar Page</title>
 
         <!--this is external style-->
         <link href="styles.css" rel="stylesheet"/>
@@ -21,7 +21,7 @@
 
             <!--page header-->
             <header id="main-heading">
-                <h1>Welcome to my website!</h1>
+                <h1>Bhaskar welcomes you</h1>
             </header>
 
             <!--main body of the page-->
@@ -32,19 +32,16 @@
                         <nav>
                             <ul>
                                 <li>
-                                    <a href="https://www.google.com/maps">Maps</a>
+                                    <a href="https://www.facebook.com/">Facebook</a>
                                 </li>
                                 <li>
-                                    <a href="https://www.google.com/mail">Mail</a>
+                                    <a href="https://www.google.com/">Google</a>
                                 </li>
                                 <li>
-                                    <a href="https://www.google.com/images">Images</a>
+                                    <a href="http://www.espncricinfo.com/">ESPN</a>
                                 </li>
                                 <li>
-                                    <a href="https://www.google.com/shopping">Shopping</a>
-                                </li>
-                                <li>
-                                    <a href="srikar.html">Open Srikar</a>
+                                    <a href="http://www.isro.gov.in/">ISRO</a>
                                 </li>
                             </ul>
                         </nav>
@@ -53,13 +50,13 @@
                         <!--form for new license in dmv-->
                         <form name="newLicenseForm">
                             <!--First Name-->
-                            <div class="container">
+                            <div>
                                 <label for="firstName">Applicant's First Name:</label>
                                 <input type="text" id="firstName" name="fName" placeholder="Enter your First Name"/>
                             </div>
                             <br />
                             <!--Last Name-->
-                            <div class="container">
+                            <div>
                                 <label for="lastName">Applicant's Last Name:</label>
                                 <input type="text" id="lastName" name="lName" placeholder="Enter your Last Name"/>
                             </div>
@@ -98,13 +95,45 @@
                                 <span>Cancel</span>
                             </button>
                         </form>
+                        <div>
+                            <p>
+                                Please enter you details correctly.
+                            </p>
+                        </div>
+                        <div>
+                            <p>
+                               Once you enter them properly, you are able to write the exam.
+                            </p>
+                        </div>
+                        <div>
+                            <span>
+                                <p>If not your application is cancelled. </p>
+                            </span>
+                        </div>
                     </section>
-                    <footer></footer>
+                    <footer id="nav-footer">
+                        <nav>
+                            <ul>
+                                <li>
+                                    <a href="http://www.gsk.com/">GSK</a>
+                                </li>
+                                <li>
+                                    <a href="http://www.drreddys.com/">Dr.reddy's</a>
+                                </li>
+                                <li>
+                                    <a href="https://www.jnj.com//">Johnson</a>
+                                </li>
+                                <li>
+                                    <a href="https://www.unilever.com/">Unilever</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </footer>
                 </article>
             </section>
             <!--footer of the page-->
             <footer>
-                I'm at the bottom
+
             </footer>
         </article>
     </body>
