assignment on less and responsive design

--- a/10_20_2016/bhaskar.html
+++ b/10_20_2016/bhaskar.html
@@ -31,9 +31,9 @@
             <!--main body of the page-->
             <section id="main-section">
                 <article>
-                    <header id="nav-heading">
+                    <header class="nav-heading">
                         <!--page naviagation-->
-                        <nav>
+                        <nav >
                             <ul>
                                 <li>
                                     <a href="https://www.facebook.com/">Facebook</a>
